# hermes-settlement

./: .gitignore  README.md  pyproject.toml  requirements.txt
agent/core/: agent.py  keystore.py  wallet.py
agent/daemon/: llm.py
agent/settlement/: base.py  bittensor.py  erc8004.py
agent/skills/: agent_skills.py  base.py  meta_skills.py  settlement_skills.py
agent/transport/: http.py
contracts/cache/: solidity-files-cache.json
contracts/src/: AgentRegistry.sol
demo/: hermes-integration-demo.cast  nous-demo.cast  nous-toolset-demo.cast
hermes_toolset/: README.md  settlement_tool.py
scripts/: demo_e2e.py  demo_hermes_integration.py  run_agent.py  test_hermes_toolset.py
