[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-settlement"
version = "0.1.0"
description = "On-chain identity (ERC-8004) and Bittensor settlement for Hermes Agent"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "web3>=7.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
bittensor = ["bittensor>=10.0"]

[tool.setuptools.packages.find]
include = ["agent*"]
